kubernetes/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    labels:
        app: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: kube-persistent_node

---
kind: Service
apiVersion: v1
metadata:
    name: frontend-svc
spec:
    selector:
        app: frontend
    type: LoadBalancer
    ports:
        - port: 80
