kubernetes/mariadb.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mariadb-statefulset
    labels:
        app: mariadb
spec:
    serviceName: mariadb-svc
    replicas: 1
    selector:
        matchLabels:
            app: mariadb
    template:
        metadata:
            labels:
                app: mariadb
        spec:
            containers:
                - name: mariadb
                  image: mariadb
                  volumeMounts:
                      - name: mariadb-storage
                        mountPath: /var/lib/mysql
            volumes:
                - name: mariadb-storage
                  persistentVolumeClaim:
                      claimName: mariadb-pvc

---
kind: Service
apiVersion: v1
metadata:
    name: mariadb-svc
spec:
    selector:
        app: mariadb
    type: LoadBalancer
    ports:
        - port: 3306
