kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - http:
              paths:
                  - path: /
                    backend:
                        serviceName: frontend-svc
                        servicePort: 80
